nginx_gateway/nginx_gateway_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway-service
spec:
  type: NodePort
  selector:
    app: nginx-gateway
  ports:
  - port: 80
    targetPort: 80
