nginx_gateway/nginx_gateway_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-gateway-ingress
spec:
  backend:
    serviceName: nginx-gateway-service
    servicePort: 80
